# rustcroft

./: Cargo.toml  LICENSE.md  README.md
.github/workflows/: rust-checks.yml
examples/example-skill/: Cargo.toml  README.md
examples/example-skill/dialog/en-us/: hello.dialog
examples/example-skill/src/: main.rs
src/: adapt_interface.rs  config.rs  dialog.rs  identity.rs  lib.rs  mycroft_message.rs  skill.rs  test.rs
