[package]
name = "rustcroft"
version = "0.1.0"
authors = ["Åke Forslund <ake.forslund@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
tokio = { version = "1.8.0", features = ["full"] }
tokio-tungstenite = "*"
tungstenite = "*"
futures-channel = "*"
futures-util = "*"
url = "*"
serde_json = "1.0.64"
serde = {version = "1.0.130", features = ["derive"]}
xdg = "^2.1"
regex = "*"
rand = "0.8.5"
glob = "*"
reqwest = { version = "0.11.11", features = ["native-tls", "blocking", "json"] }
lazy_static = "1.4.0"
